src/syntax_analysis/expressions/grouped_expression/snapshots/rust_monkey_interpreter__syntax_analysis__expressions__grouped_expression__tests__test_syntax_analysis_for_grouped_expressions_case2.snap
---
source: src/syntax_analysis/expressions/grouped_expression/tests.rs
expression: returned_abstract_syntax_tree
---
{
  "abstract_syntax_tree": [
    {
      "EXPRESSION": {
        "expression": {
          "INFIX": {
            "left_hand_expression": {
              "INFIX": {
                "left_hand_expression": {
                  "INTEGER": {
                    "integer_token": {
                      "token_type": "INTEGER",
                      "literal": "5"
                    }
                  }
                },
                "operator_token": {
                  "token_type": "MINUS",
                  "literal": "-"
                },
                "right_hand_expression": {
                  "INTEGER": {
                    "integer_token": {
                      "token_type": "INTEGER",
                      "literal": "10"
                    }
                  }
                }
              }
            },
            "operator_token": {
              "token_type": "MULTIPLY",
              "literal": "*"
            },
            "right_hand_expression": {
              "INTEGER": {
                "integer_token": {
                  "token_type": "INTEGER",
                  "literal": "10"
                }
              }
            }
          }
        }
      }
    }
  ],
  "syntax_parsing_errors": []
}
