src/syntax_analysis/expressions/grouped_expression/snapshots/rust_monkey_interpreter__syntax_analysis__expressions__grouped_expression__tests__test_syntax_analysis_for_grouped_expressions_case3.snap
---
source: src/syntax_analysis/expressions/grouped_expression/tests.rs
expression: "crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::get_tokens(code))"
---
{
  "abstract_syntax_tree": [
    {
      "EXPRESSION": {
        "expression": {
          "INFIX": {
            "left_hand_expression": {
              "INFIX": {
                "left_hand_expression": {
                  "INTEGER": {
                    "integer_token": {
                      "INTEGER": {
                        "literal": "1"
                      }
                    }
                  }
                },
                "operator_token": "PLUS",
                "right_hand_expression": {
                  "INFIX": {
                    "left_hand_expression": {
                      "INTEGER": {
                        "integer_token": {
                          "INTEGER": {
                            "literal": "2"
                          }
                        }
                      }
                    },
                    "operator_token": "PLUS",
                    "right_hand_expression": {
                      "INTEGER": {
                        "integer_token": {
                          "INTEGER": {
                            "literal": "3"
                          }
                        }
                      }
                    }
                  }
                }
              }
            },
            "operator_token": "PLUS",
            "right_hand_expression": {
              "INTEGER": {
                "integer_token": {
                  "INTEGER": {
                    "literal": "4"
                  }
                }
              }
            }
          }
        }
      }
    }
  ],
  "syntax_parsing_errors": []
}
